Update QR codes and showcase HTML with version query parameters to bypass browser cache

--- a/public/showcase.html
+++ b/public/showcase.html
@@ -1917,14 +1917,14 @@
                 <div class="download-grid">
                     <div class="qr-card">
                         <div class="qr-image">
-                            <img src="assets/qr/android_qr.png" alt="Android QR Code">
+                            <img src="assets/qr/android_qr.png?v=beta2" alt="Android QR Code">
                         </div>
                         <div class="qr-label">Android App</div>
                         <div class="qr-sub">Scan to download APK</div>
                     </div>
                     <div class="qr-card">
                         <div class="qr-image">
-                            <img src="assets/qr/ios_qr.png" alt="iOS QR Code">
+                            <img src="assets/qr/ios_qr.png?v=beta2" alt="iOS QR Code">
                         </div>
                         <div class="qr-label">iOS App</div>
                         <div class="qr-sub">Scan to download</div>
