Add direct download link for Android Beta APK to showcase page

--- a/public/showcase.html
+++ b/public/showcase.html
@@ -1382,6 +1382,7 @@
                 </p>
                 <div class="hero-ctas">
                     <a href="#features" class="btn-primary">Explore Features</a>
+                    <a href="downloads/te_uekera_beta.apk" class="btn-primary" style="background: var(--navy); box-shadow: 0 12px 32px rgba(30, 58, 138, .4);">Download Beta APK</a>
                     <a href="#api" class="btn-outline">View API</a>
                 </div>
             </div>
@@ -1921,6 +1922,7 @@
                         </div>
                         <div class="qr-label">Android App</div>
                         <div class="qr-sub">Scan to download APK</div>
+                        <a href="downloads/te_uekera_beta.apk" class="btn-primary" style="margin-top: 16px; width: 100%; text-align: center; font-size: 11px;">Direct Download</a>
                     </div>
                     <div class="qr-card">
                         <div class="qr-image">
